@@ -1,5 +1,6 @@
 Version 3.xxxx (November xxth 2016)
 - Fixed: JSon float/nan value, solved by upgrading JSonCPP
+- Implemented: Blockly/Lua Set SetPoint option
 
 Version 3.5878 (November 10th 2016)
 - Fixes and various improvements
